--- a/website.css
+++ b/website.css
@@ -149,7 +149,7 @@ nav {
 }
 
 .nav-elements li {
-    margin-left: 10px;
+    margin: 0 15px;
 }
 
 .nav-elements a {
@@ -172,8 +172,27 @@ nav {
     background: none;
     border: none;
     cursor: pointer;
-    color: var(--text-color); 
-    font-size: 24px; 
+    color: var(--text-color);
+    font-size: 24px;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: var(--text-color);
+    transition: transform 0.3s ease;
+}
+
+.menu-toggle.active {
+    transform: rotate(180deg);
+}
+
+.bar {
+    height: 3px;
+    width: 25px;
+    background-color: white;
+    margin: 4px 0;
 }
 
 /* Body */
@@ -209,6 +228,69 @@ body {
     text-align: center;
     line-height: 50px;
     padding-bottom: 100px;
+}
+
+.typewriter {
+    font-family: monospace;
+    font-size: 24px;
+    margin: 20px;
+}
+
+#typewriter-text {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.glowing-text {
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 0 10px rgb(255, 0, 0),
+        0 0 20px rgb(255, 0, 0),
+        0 0 30px rgb(255, 0, 0),
+        0 0 40px rgb(255, 0, 0);
+    animation: rgbGlow 3s infinite alternate;
+    transition: text-shadow 0.5s ease-in-out;
+    transition: color 0.5s ease;
+}
+
+@keyframes rgbGlow {
+    0% {
+        text-shadow: 0 0 10px rgb(255, 0, 0),
+            /* Red */
+            0 0 20px rgb(255, 0, 0),
+            0 0 30px rgb(255, 0, 0),
+            0 0 40px rgb(255, 0, 0);
+        color: rgb(255, 0, 0);
+    }
+
+    33% {
+        text-shadow: 0 0 10px rgb(0, 255, 0),
+            /* Green */
+            0 0 20px rgb(0, 255, 0),
+            0 0 30px rgb(0, 255, 0),
+            0 0 40px rgb(0, 255, 0);
+        color: rgb(0, 255, 0);
+    }
+
+    66% {
+        text-shadow: 0 0 10px rgb(0, 0, 255),
+            /* Blue */
+            0 0 20px rgb(0, 0, 255),
+            0 0 30px rgb(0, 0, 255),
+            0 0 40px rgb(0, 0, 255);
+        color: rgb(0, 0, 255);
+    }
+
+    100% {
+        text-shadow: 0 0 10px rgb(255, 0, 0),
+            /* Back to Red */
+            0 0 20px rgb(255, 0, 0),
+            0 0 30px rgb(255, 0, 0),
+            0 0 40px rgb(255, 0, 0);
+        color: rgb(255, 0, 0);
+    }
 }
 
 .button {
@@ -283,6 +365,7 @@ body {
     margin-top: 20px;
     font-size: 16px;
     line-height: 1.5;
+    text-indent: 10px;
 }
 
 .profile-container:hover {
@@ -554,5 +637,4 @@ footer {
     background: #333;
     color: white;
     bottom: 0;
-    width: 100%;
 }
