--- a/website.css
+++ b/website.css
@@ -206,6 +206,7 @@ body {
     color: var(--text-color);
     position: relative;
     animation: fadeIn 1s ease-in-out;
+    overflow-x: hidden;
 }
 
 @keyframes fadeIn {
@@ -358,6 +359,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
 }
 
 .profile-container p {
