--- a/body.css
+++ b/body.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: var(--background-color);
   color: var(--text-color);
   position: relative;
@@ -25,7 +25,7 @@ body {
 /* Body :: Front Page */
 
 .frontpage {
-  font-family: "Jost", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 25px;
   color: var(--text-color);
   margin-left: 30px;
@@ -79,7 +79,7 @@ body {
 /* Body :: About Me Page */
 
 #about {
-  font-family: "Jost", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
   color: var(--text-color);
   display: flex;
@@ -94,7 +94,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
-  margin-top: 100px;
+  margin-top: 10vh;
   width: 100%;
 }
 
@@ -205,7 +205,7 @@ body {
 /* Body :: Projects Page*/
 
 #projects {
-  font-family: "Jost", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
   color: var(--text-color);
   text-align: center;
@@ -259,7 +259,7 @@ body {
 /* Body :: Contact Me Page */
 
 #contact {
-  font-family: "Jost", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
   color: var(--text-color);
   text-align: center;
@@ -276,6 +276,7 @@ body {
   flex-direction: column;
   width: 600px;
   margin: 40px auto;
+  margin-top: 12vh;
   padding: 30px;
   background-color: #f9f9f9;
   border-radius: 10px;
