--- a/website.css
+++ b/website.css
@@ -15,7 +15,6 @@ html {
   --text-color: white;
   --primary-color: #b22222;
   --secondary-color: lightcoral;
-  --tertiary-color: coral;
   --primary-color-transparent: rgba(178, 34, 34, 0.5);
 }
 
@@ -25,7 +24,6 @@ html {
   --text-color: #000000;
   --primary-color: #b22222;
   --secondary-color: lightcoral;
-  --tertiary-color: coral;
   --primary-color-transparent: rgba(178, 34, 34, 0.5);
 }
 
@@ -81,34 +79,17 @@ html {
   margin: 4px 0;
 }
 
-/* Responsive Styles */
+/* Responsive Styles Media Queries*/
 
-@media (max-width: 600px) {
-  .footer-nav-elements {
-    flex-direction: column;
-  }
+@media (min-width: 1280px) and (max-width: 1535px) {
   
-  .credits {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #back-to-top {
-    right: 15px; 
-    bottom: 20px;
-  }
-
-  .social-columns {
-    flex-direction: column;
-  }
-
-  .professional, .personal {
-    margin: 10px 0; 
-  }
 }
 
+@media (min-width: 1024px) and (max-width: 1279px) {
 
-@media (max-width: 768px) {
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
   .header-nav-elements {
     display: none;
     flex-direction: column;
@@ -120,7 +101,7 @@ html {
     padding: 10px;
     gap: 20px;
     font-size: 1rem;
-    background-color: rgb(255, 255, 255, 0.5); 
+    background-color: rgb(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     z-index: 100;
@@ -138,5 +119,140 @@ html {
     background-color: rgb(255, 255, 255, 0.5);
     width: 100%;
     border: none;
+  }
+
+  .footer-content h1{
+    font-size: 1.5rem;
+  }
+
+  .credits {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #back-to-top {
+    right: 15px;
+    bottom: 20px;
+  }
+
+  .social-columns {
+    flex-direction: column;
+  }
+
+  .professional,
+  .personal {
+    margin: 10px 0;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 767px) {
+  .header-nav-elements {
+    display: none;
+    flex-direction: column;
+    width: 30%;
+    height: 100vh;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    padding: 10px;
+    gap: 20px;
+    font-size: 1rem;
+    background-color: rgb(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+  }
+
+  .header-nav-elements.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: flex;
+  }
+
+  .header-nav-elements a:hover {
+    background-color: rgb(255, 255, 255, 0.5);
+    width: 100%;
+    border: none;
+  }
+
+  .footer-content h1{
+    font-size: 1.5rem;
+  }
+
+  .credits {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #back-to-top {
+    right: 15px;
+    bottom: 20px;
+  }
+
+  .social-columns {
+    flex-direction: column;
+  }
+
+  .professional,
+  .personal {
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 639px) {
+  .header-nav-elements {
+    display: none;
+    flex-direction: column;
+    width: 30%;
+    height: 100vh;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    padding: 10px;
+    gap: 20px;
+    font-size: 1rem;
+    background-color: rgb(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+  }
+
+  .header-nav-elements.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: flex;
+  }
+
+  .header-nav-elements a:hover {
+    background-color: rgb(255, 255, 255, 0.5);
+    width: 100%;
+    border: none;
+  }
+
+  .footer-content h1{
+    font-size: 1.5rem;
+  }
+
+  .credits {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #back-to-top {
+    right: 15px;
+    bottom: 20px;
+  }
+
+  .social-columns {
+    flex-direction: column;
+  }
+
+  .professional,
+  .personal {
+    margin: 10px 0;
   }
 }
