--- a/header.css
+++ b/header.css
@@ -26,7 +26,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: transform 0.3s ease;
+  will-change: transform 0.3s ease;
 }
 
 .logo img {
@@ -102,9 +102,9 @@ header {
   top: 75px;
   right: 0;
   width: 40%;
-  height: 100%;
+  max-height: 200vh;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
 }
 
@@ -176,7 +176,7 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  transition: all 0.5s ease;
+  transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .slider i {
   font-size: 20px;
