--- a/base.css
+++ b/base.css
@@ -66,6 +66,55 @@ html {
   cursor: pointer;
 }
 
+.cert-modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0, 0, 0, 0.9); 
+  transition: opacity 0.3s ease; 
+}
+
+.cert-modal-content {
+  max-width: 90%;
+  max-height: 80%;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 5px;       
+  display: flex;              
+  justify-content: center;     
+  align-items: center; 
+}
+
+.cert-close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.loader {
+  display: none; 
+  border: 8px solid rgba(255, 255, 255, 0.3);
+  border-top: 8px solid #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .profile-modal {
   display: none;
   position: fixed;
@@ -155,32 +204,6 @@ body {
     font-size: 30px;
   }
 
-  .header-nav-elements {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    position: static;
-    background: none;
-    width: auto;
-    backdrop-filter: none;
-    box-shadow: none;
-  }
-
-  .header-nav-elements li {
-    position: static;
-    padding-left: 10px;
-  }
-
-  .header-nav-elements a:hover {
-    background-color: var(--secondary-color);
-    border-radius: 5px;
-  }
-
-  .menu-toggle {
-    display: none;
-  }
-
   .frontpage {
     font-size: 28px;
   }
@@ -209,6 +232,45 @@ body {
 
   .about-paragraph {
     font-size: 1.2em;
+  }
+
+  .gallery-track {
+    justify-content: center;
+  }
+
+  .certificate-gallery-image {
+    width: 150px;
+  }
+
+  .modal-content {
+    flex-direction: row;
+    max-width: 80%;
+  }
+
+  #modal-image {
+    width: 50%;
+  }
+
+  .modal-details {
+    width: 50%;
+    padding-left: 1rem;
+  }
+
+  #certifications h1 {
+    font-size: 32px;
+  }
+
+  .certificates-gallery-container {
+    gap: 30px;
+  }
+  
+  .certificates-gallery-item {
+    width: 100%;
+    max-width: 500px;
+  }
+
+  #skills h1 {
+    font-size: 32px;
   }
 
   .skill-item {
@@ -300,6 +362,32 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .header-nav-elements {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-direction: row;
+    position: static;
+    background: none;
+    width: auto;
+    backdrop-filter: none;
+    box-shadow: none;
+  }
+
+  .header-nav-elements li {
+    position: static;
+    padding-left: 10px;
+  }
+
+  .header-nav-elements a:hover {
+    background-color: var(--secondary-color);
+    border-radius: 5px;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
+
   .frontpage {
     font-size: 32px;
   }
@@ -334,6 +422,14 @@ body {
 
   .about-paragraph {
     font-size: 1.5em;
+  }
+
+  #certifications h1 {
+    font-size: 40px;
+  }
+
+  #skills h1 {
+    font-size: 40px;
   }
 
   .skill-name {
