--- a/header.css
+++ b/header.css
@@ -12,7 +12,8 @@ header {
 .header-nav {
   position: fixed;
   height: 75px;
-  background-color: var(--primary-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
   display: flex;
   align-items: center;
   padding: 10px 20px;
