--- a/base.css
+++ b/base.css
@@ -67,16 +67,16 @@ html {
 }
 
 .cert-modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgba(0, 0, 0, 0.9); 
-  transition: opacity 0.3s ease; 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: opacity 0.3s ease;
 }
 
 .cert-modal-content {
@@ -84,10 +84,10 @@ html {
   max-height: 80%;
   margin: auto;
   margin-top: 100px;
-  border-radius: 5px;       
-  display: flex;              
-  justify-content: center;     
-  align-items: center; 
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cert-close {
@@ -101,7 +101,7 @@ html {
 }
 
 .loader {
-  display: none; 
+  display: none;
   border: 8px solid rgba(255, 255, 255, 0.3);
   border-top: 8px solid #fff;
   border-radius: 50%;
@@ -111,8 +111,12 @@ html {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .profile-modal {
@@ -263,7 +267,7 @@ body {
   .certificates-gallery-container {
     gap: 30px;
   }
-  
+
   .certificates-gallery-item {
     width: 100%;
     max-width: 500px;
